[package]
name = "es38"
version = "0.1.0"
authors = ["seanybaggins <seli2854@colorado.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rotary-encoder-hal = "0.3.0"
embedded-hal = "0.2.4"
either = {version = "1.6.0", default-features = false}